# pdfium-playground

./: CMakeLists.txt  README.md  local-build.cmd
src/: create_pdf.cpp  main.cpp
